# Raytracer

./: CMakeLists.txt
src/: Math.hpp  ObjFile.cpp  ObjFile.hpp  main.cpp
